@@ -1,7 +1,16 @@
 // Default values for the DOLFIN parameter system.
 //
 // First added:  2005-12-19
-// Last changed: 2007-02-27
+// Last changed: 2008-05-17
+
+//--- Linear algebra ---
+#ifdef HAS_PETSC
+add("linear algebra backend", "PETSc");
+#else
+add("linear algebra backend", "uBLAS");
+#endif
+
+// FIXME: Need to cleanup among parameters below
 
 //--- General parameters ---
 
